index: fix bot picture align top

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -61,7 +61,6 @@ img.cover {
   overflow: hidden;
   display: flex;
   justify-content: center;
-  align-items: center;
 
   > img {
     min-width: 500px;
